--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block contents %}
-<center><font size="36">Coming Soon...</size></center>
+<center><font size="36">Under Construction...</size></center>
 {% endblock %}
