Login to FB works

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,9 @@
 {% block contents %}
 Contents block
 {% endblock %}
+{% block content %}
+Content block
+{% endblock %}
 </td>
 <tr><td></td></tr>
 <tr></tr>
